# vc-myproduct

./: .gitignore  main.py  pyproject.toml
app/: run.py
app/config/: constant.py  settings.py
app/events/: event_manager.py
app/gui/: __init__.py  database_form.py  hardware_key_form.py  serial_port_form.py
app/gui/controllers/: gui_controller.py
app/states/: __init__.py  state_appdb.py  state_hardware.py  state_manager.py  state_otodb.py
app/utils/: __init__.py  encrypt.py  logger.py  serialgen.py
