[project]
name = "vc-myproduct"
version = "0.1.0"
description = "addon otomax-auto update produk"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyodbc>=5.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
    "sqlmodel>=0.0.24",
]
